[gd_scene load_steps=4 format=3 uid="uid://bcih6li88g6a"]

[ext_resource type="Script" path="res://passengers/passenger.gd" id="1_nd8ur"]
[ext_resource type="SpriteFrames" uid="uid://bmeoy1t68s31s" path="res://passengers/animations/fart-police.tres" id="2_nkr8l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vb5ac"]
radius = 33.8571
height = 257.143

[node name="Passenger" type="CharacterBody2D" groups=["passengers"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.28, 0.28)
platform_floor_layers = 4294967040
script = ExtResource("1_nd8ur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(21.4286, -378.571)
sprite_frames = ExtResource("2_nkr8l")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.7143, -10.7143)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vb5ac")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="TimerWalking" type="Timer" parent="."]
one_shot = true

[node name="TimerStandUp" type="Timer" parent="."]
one_shot = true

[node name="TimerGameOver" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TimerWalking" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerStandUp" to="." method="_on_timer_stand_up_timeout"]
[connection signal="timeout" from="TimerGameOver" to="." method="_on_timer_game_over_timeout"]
